# sophomore-year-first-semester

./: README.md
AI_in_QQ/QQ_bot/NapCat.Shell/: guild1.db-shm  guild1.db-wal  loadNapCat.js
AI_in_QQ/QQ_bot/NapCat.Shell/config/: onebot11_2314971985.json  webui.json
AI_in_QQ/QQ_bot/aaa/: README.md  bot.py  pyproject.toml
AI_in_QQ/QQ_bot/doc/: Deploy_on_docker_and_ssh.md  README.md
Chess/AI_training/: model.py
Chess/AI_training/alpha-zero-general/: Coach.py  Game.py  MCTS.py  NeuralNet.py  main.py  play_vs_ai.py
Chess/doc/: README.md  journal.md
Chess/inc/ai/: count_point_and_give_an_answer.c  kill_threat_proof.c  kill_threat_proof.h
Chess/inc/human_to_human/: ban.c  bound_checking_and_is_luozi.c  different_types_of_chess.c  look_at_surrounding.c  place_chess.c
Chess/inc/main/: main_for_ai_to_human.c  main_for_human_to_human.c  show_board.c
Chess/src/: shared_variable_function.c  shared_variable_function.h
FADING_essay_reproduction/: README.md  specialize_complete.py
